--- a/SistemaAlmacen/pom.xml
+++ b/SistemaAlmacen/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>jcalendar</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itextpdf</artifactId>
+            <version>5.5.13.4</version>
+        </dependency>
     </dependencies>
     
     <properties>
@@ -37,6 +42,8 @@
                 <version>3.1.0</version>
                 <configuration>
                     <mainClass>Vistas.Main</mainClass> <!-- Asegúrate de que esté correctamente especificado -->
+                 <!--<mainClass>Vistas.Main</mainClass>  Asegúrate de que esté correctamente especificado -->
+                
                 </configuration>
             </plugin>
         </plugins>
